--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <body>
         <header>
             <div class="inline-block" class="logo">
-                <img src="file:///C:/Users/sabri/OneDrive/Desktop/UXUI%20Design%20Coding/Sabrina-dinh-week17hw/UX_UI_HW_17/Images/slogo.png" class="logo">
+                <img src="Images/slogo.png" class="logo">
             </div>
+            
             <nav class="inline-block">
                 <ul>
                     <li class="inline-block">About</li>
@@ -20,7 +21,7 @@
         </header>
         <section class="heroimg">
             <div class="content">
-                <img src="file:///C:/Users/sabri/Downloads/_HUY2335.JPEG">
+                <img src="Images/_HUY2335 (3).JPEG">
                 <p>It’s a pleasure to meet you!
 
                     My name is Sabrina Dinh, and I am a junior UX/UI Designer. 
