--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </header>
         <section class="heroimg">
             <div class="content">
-                <img src="Images/_HUY2335 (3).JPEG">
+                <img src="Images/hero.JPEG">
                 <p>It’s a pleasure to meet you!
 
                     My name is Sabrina Dinh, and I am a junior UX/UI Designer. 
